--- a/02.Github.md
+++ b/02.Github.md
@@ -3,6 +3,8 @@
 
 # Create account
 ## Add ssh keys
+ssh-keygen -q -N "" -C "user@lab.com"
+
 ## create private repo: Apps
 ## add repo to local
 ```vim
@@ -13,6 +15,9 @@ git pull origin main
 
 # Add App kubelabs and push
 - Git clone kubelabs repo
+```vim
+git clone https://github.com/cachac/kubelabs.git
+```
 - copy dev/public-api folder
 ```vim
 git add .
