--- a/02.Github.md
+++ b/02.Github.md
@@ -24,6 +24,13 @@ git add .
 git commit -m 'init'
 git push
 ```
+
+# Install Docker
+> [docker](https://docs.docker.com/engine/install/ubuntu/)
+```vim
+curl -fsSL https://get.docker.com -o get-docker.sh
+sudo sh get-docker.sh
+```
 # build docker container
 ```vim
 source .env.qa
