--- a/02.Github.md
+++ b/02.Github.md
@@ -22,7 +22,8 @@ git clone https://github.com/cachac/kubelabs.git
 ```vim
 git add .
 git commit -m 'init'
-git push
+git checkout -b main
+git push -u origin main
 ```
 
 # Install Docker
