--- a/02.Github.md
+++ b/02.Github.md
@@ -1,19 +1,19 @@
 
-# Github <!-- omit in TOC-->
+# 1. Github <!-- omit in TOC-->
 
-# Create account
-## Add ssh keys
+# 2. Create account
+## 2.1. Add ssh keys
 ssh-keygen -q -N "" -C "user@lab.com"
 
-## create private repo: Apps
-## add repo to local
+## 2.2. create private repo: Apps
+## 2.3. add repo to local
 ```vim
 git init
 git remote add origin ssh-link
 git pull origin main
 ```
 
-# Add App kubelabs and push
+# 3. Add App kubelabs and push
 - Git clone kubelabs repo
 ```vim
 git clone https://github.com/cachac/kubelabs.git
@@ -26,13 +26,13 @@ git checkout -b main
 git push -u origin main
 ```
 
-# Install Docker
+# 4. Install Docker
 > [docker](https://docs.docker.com/engine/install/ubuntu/)
 ```vim
 curl -fsSL https://get.docker.com -o get-docker.sh
 sudo sh get-docker.sh
 ```
-# build docker container
+# 5. build docker container
 ```vim
 source .env.qa
 echo $APP_ENV_KUBE_API
@@ -48,12 +48,12 @@ curl localhost:3080/healthcheck
 ```
 
 
-# DockerHub
-## Create Account
-## publish repo
+# 6. DockerHub
+## 6.1. Create Account
+## 6.2. publish repo
 > [login](https://docs.docker.com/engine/reference/commandline/login/)
 ```vim
 docker login
 docker push $REGISTRY/$API_NAME:$VERSION
 ```
-## make private
+## 6.3. make private
