--- a/02.Github.md
+++ b/02.Github.md
@@ -31,6 +31,8 @@ git push -u origin main
 ```vim
 curl -fsSL https://get.docker.com -o get-docker.sh
 sudo sh get-docker.sh
+sudo usermod -aG docker $USER
+newgrp docker
 ```
 # 5. build docker container
 ```vim
