--- a/02.Github.md
+++ b/02.Github.md
@@ -34,7 +34,15 @@ sudo sh get-docker.sh
 sudo usermod -aG docker $USER
 newgrp docker
 ```
-# 5. build docker container
+
+
+# 5. DockerHub
+## 5.1. Create Account
+## 5.2. publish repo
+> [login](https://docs.docker.com/engine/reference/commandline/login/)
+
+
+# 6. build docker container
 ```vim
 source .env.qa
 echo $APP_ENV_KUBE_API
@@ -43,19 +51,13 @@ export $API_NAME=cachac/kubelabs_publicapi
 export $VERSION=1.0.0
 
 docker build . -f qa.dockerfile -t $REGISTRY/$API_NAME:$VERSION --build-arg APP_ENV="$APP_ENV_KUBE_API"
+docker login
 docker push $REGISTRY/$API_NAME:$VERSION
+
 # test
 docker run --rm --name api -p 3080:3080 $REGISTRY/$API_NAME:$VERSION
 curl localhost:3080/healthcheck
 ```
 
 
-# 6. DockerHub
-## 6.1. Create Account
-## 6.2. publish repo
-> [login](https://docs.docker.com/engine/reference/commandline/login/)
-```vim
-docker login
-docker push $REGISTRY/$API_NAME:$VERSION
-```
-## 6.3. make private
+## 6.1. make repo private
