--- a/03.KubernetesCluster.md
+++ b/03.KubernetesCluster.md
@@ -1,5 +1,5 @@
 
-# 1. Install Kubernetes Cluster
+# 03. Install Kubernetes Cluster <!-- omit in toc -->
 
-## 1.1. [GKE](./GKE.md)
-## 1.2. [EKS](./EKS.md)
+## 1. [GKE](./GKE.md)
+## 2. [EKS](./EKS.md)
