--- a/04.App.md
+++ b/04.App.md
@@ -1,8 +1,9 @@
 
-# Kubernetes definitions files
-## create second private git repo: deploy
-## add repo to local
-## public api yamls
+# 04 Kubernetes definitions files <!-- omit in toc -->
+
+# 1. Create second private git repo: deploy
+## 1.1. add repo to local
+## 1.2. public api yamls
 - ns public
 - cm
 - deploy (image name and version)
@@ -36,18 +37,18 @@ annotations:
 
 -  (change USERLAB)
 
-## Check VPC Network static-ip
+## 1.3. Check VPC Network static-ip
 - In use by: ingress
 
-## check ingress
+## 1.4. check ingress
 > [unhealthy backends](https://www.anycodings.com/questions/gke-ingress-shows-unhealthy-backend-services)
 ```vim
 kubectl get ing
 # check address
 ```
-## check GCP console LB
 
-## add DNS records
+## 1.5. Check GCP console LB
+# 2. add DNS records
 > [multi LB](https://cloud.google.com/kubernetes-engine/docs/tutorials/http-balancer)
 > [dns](https://medium.com/google-cloud/dns-on-gke-everything-you-need-to-know-b961303f9153)
 > [external dns](https://joachim8675309.medium.com/externaldns-with-gke-cloud-dns-38a174fdced7)
@@ -55,19 +56,20 @@ kubectl get ing
 - api.USERLAB.kubelabs.tk
 - Add external Static IP
 
-## test URL api
+# 3. test URL api
 - /
 - /graphql
 - curl http://api.cachac.kubelabs2.tk
--
-# SSL/TLS
-https://cloud.google.com/kubernetes-engine/docs/how-to/ingress-features#https_redirect
 
+# 4. SSL/TLS
+> [GKE ingress](https://cloud.google.com/kubernetes-engine/docs/how-to/ingress-features#https_redirect)
+> [k8s cert](https://cloud.google.com/kubernetes-engine/docs/how-to/managed-certs)
 - create managed cert
 - delete ingress
 - front-end config  -  ssl redirect
 - update ingress class and cert
 
+```vim
   annotations:
     kubernetes.io/ingress.global-static-ip-name: "api-static-ip"
     networking.gke.io/managed-certificates: managed-cert
@@ -75,10 +77,11 @@ https://cloud.google.com/kubernetes-engine/docs/how-to/ingress-features#https_re
 		# redirect
     kubernetes.io/ingress.allow-http: "false"
     networking.gke.io/v1beta1.FrontendConfig: lb-http-to-https
+```
 
-https://cloud.google.com/kubernetes-engine/docs/how-to/managed-certs
 
-# Storage
+
+# 5. Storage
 - vol.yml (1 node - many pods)
 - deploy vol, 1 pod running - 1 pod pending
 - filestore
@@ -87,6 +90,3 @@ https://cloud.google.com/kubernetes-engine/docs/how-to/managed-certs
 - assets/filestoreVolumen.yaml
 - Optional: assets/filestoreStorageClass.yaml
 - update deploy vol: filestore-public-api
-
-
-you need a websit right now creete a n
