--- a/05.Kustomize.md
+++ b/05.Kustomize.md
@@ -1,5 +1,3 @@
-
-
 # 1. kustomize
 
 ## 1.1. delete public ns
@@ -18,7 +16,8 @@ kubectl get namespace "${NS}" -o json \
 - - stage
 - - production
 
-
+# Create Kustomize yaml files
+> [app kustomize](./assets/kustomize/)
 ## 1.3. build
 ```vim
 kustomize build overlays/stage
