--- a/06.Kustomize Practice.md
+++ b/06.Kustomize Practice.md
@@ -1,25 +1,16 @@
-# 1. kustomize Practice
+# 1. kustomize Practice <!-- omit in TOC -->
 
-## 1.1. Create production kustomize yaml files
+# 1. Create production folder
+- /overlays/production
+
+# Create kustomization.yaml
+- namespace
+- commonLables (optional)
+- resource: ns - base
+- Patches: File patch
+- build & apply
 ```vim
-```
-## 1.2. folder structure
-- base
-- overlays
-- - stage
-- - production
+ kustomize  build  overlay/production
 
-# 2. Create Kustomize yaml files
-> [app kustomize](./assets/kustomize/)
-## 2.1. build
-```vim
-kustomize build overlays/stage
+ kubectl apply -k  overlay/production
 ```
-## 2.2. apply
-```vim
-kubectl apply -k overlay/stage
-```
-
-# 3. registry secret & DNS stage
-
-> [file definitions](./assets/kustomize/)
