--- a/07.Actions.md
+++ b/07.Actions.md
@@ -1,3 +1,4 @@
 # actions demos
 # public-api
 # github webhook
+gcloud container clusters get-credentials cicd01 --zone us-east1-b --project golden-plateau-358415gcloud container clusters get-credentials cicd01 --zone us-east1-b --project golden-plateau-358415
