--- a/02.Github.md
+++ b/02.Github.md
@@ -13,6 +13,16 @@ git remote add origin ssh-link
 git pull origin main
 ```
 
+## STAGE branch
+- stage
+- main= production
+
+```vim
+git checkout -b stage
+git push -u origin stage
+```
+
+
 # 3. Add App kubelabs and push
 - Git clone kubelabs repo
 ```vim
