--- a/04.App.md
+++ b/04.App.md
@@ -2,8 +2,12 @@
 # 04 Kubernetes definitions files <!-- omit in toc -->
 
 # 1. Create second private git repo: deploy
+
 ## 1.1. add repo to local
-## 1.2. public api yamls
+
+## 1.2. public-api yamls
+>[yaml](./assets/apps-files/public-api/)
+- folder public-api:
 - ns public
 - cm
 - deploy (image name and version)
