--- a/05.Kustomize.md
+++ b/05.Kustomize.md
@@ -1,6 +1,6 @@
-# 1. kustomize
+# 1. kustomize <!-- omit in toc -->
 
-## 1.1. delete public ns
+# 1. delete public ns
 ```vim
 kubectl delete ns public --force --grace-period=0
 
@@ -10,23 +10,23 @@ kubectl get namespace "${NS}" -o json \
   | tr -d "\n" | sed "s/\"finalizers\": \[[^]]\+\]/\"finalizers\": []/" \
   | kubectl replace --raw /api/v1/namespaces/${NS}/finalize -f -
 ```
-## 1.2. folder structure
+# 2. GitHub Deploy Project folder structure
+public-api/
 - base
 - overlays
 - - stage
 - - production
 
-# Create Kustomize yaml files
+# 3. Create Kustomize yaml files
 > [app kustomize](./assets/kustomize/)
-## 1.3. build
+# 4. build
 ```vim
 kustomize build overlays/stage
 ```
-## 1.4. apply
+# 5. apply
 ```vim
 kubectl apply -k overlay/stage
 ```
 
-# 2. registry secret & DNS stage
+# 6. registry secret & DNS stage
 
-> [file definitions](./assets/kustomize/)
