--- a/07.ArgoCD.md
+++ b/07.ArgoCD.md
@@ -17,25 +17,7 @@ k get pods
 kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/master/manifests/ha/install.yaml
 ```
 
-# 3. NodePort access
-```yaml
-apiVersion: v1
-kind: Service
-metadata:
-  name: argo-nodeport
-	namespace: argocd
-spec:
-	ports:
-	- protocol: TCP
-		port: 8080
-		nodePort: 30088
-		targetPort: 8080
-	selector:
-		app.kubernetes.io/name: argocd-server
-	type: NodePort
-```
-
-## 3.1. Port-forward
+# 3. UI Access -  Port-forward
 ```vim
 kubectl -n argocd port-forward $(kubectl -n argocd get pod -l app.kubernetes.io/name=argocd-server -o jsonpath='{.items[0].metadata.name}') 8080:8080
 
@@ -97,17 +79,48 @@ admin.enabled: "false"
 
 ## 5.5. Logout and login new user
 
-
-# 6. Set New Project (UI)
-
-# 7. Set New Repository (UI)
-- Connect Repo Using SSH
-
-# 8. Create Application
-## UI
+# 6. Set New Repository (UI)
+- Connect Repo Using SSH (Git Deploy repo)
+- Name: apps
+# 7. Create Application
+> [sync options](https://argo-cd.readthedocs.io/en/stable/user-guide/sync-options/)
+## 7.1. UI
 - stage-public-api
-- sync manual
+- sync automated, prune true, selfHeal: true
 - auto-create namespace
-- path: ovelays/qa
-## YAML
+- path: public-api/overlays/stage/
+- namespace: public-stage
+- Edit as YAML
+## 7.2. App YAML (Git Deploy repo)
+- folder apps/stage
+- public-api.yaml (copy-paste Argo Application yaml)
+```vim
+kubectl apply -f apps/public-api.yaml
+```
 
+## 7.3. Check ArgoCD UI Apps
+## 7.4. Check Pods: Running 2 replicas
+
+# 8. Change overlays/stage deployment replicas
+- 3 replicas
+
+## 8.1. Sync git repo
+
+```vim
+git add .
+git commit -m "update deployment replicas"
+git push origin main
+```
+> wait 3 min to auto-sync
+# 9. Github Webhook
+## 9.1. static ip
+```vim
+gcloud compute addresses create argo-static-ip --global
+```
+## 9.2. Expose Argo via Ingress
+> [yaml](./assets/argo/ingress.yaml)
+```vim
+cert
+frontedconfig
+k apply -f assets/argo/ingress.yaml
+```
