--- a/04.App.md
+++ b/04.App.md
@@ -35,6 +35,8 @@ kubectl get secret regcred
 - Ingress (static ip-address)
 ```vim
 gcloud compute addresses create api-static-ip --global
+
+gcloud compute addresses describe api-static-ip --format='value(address)' --global   
 ```
 annotations:
     kubernetes.io/ingress.global-static-ip-name: "api-static-ip"
