--- a/07.ArgoCD.md
+++ b/07.ArgoCD.md
@@ -112,15 +112,7 @@ git commit -m "update deployment replicas"
 git push origin main
 ```
 > wait 3 min to auto-sync
-# 9. Github Webhook
-## 9.1. static ip
-```vim
-gcloud compute addresses create argo-static-ip --global
-```
-## 9.2. Expose Argo via Ingress
+
+# 9. Expose Argo via Ingress
 > [yaml](./assets/argo/ingress.yaml)
-```vim
-cert
-frontedconfig
-k apply -f assets/argo/ingress.yaml
-```
+> [GKE load balancer](https://argo-cd.readthedocs.io/en/latest/operator-manual/ingress/#google-cloud-load-balancers-with-kubernetes-ingress)
