--- a/05.Kustomize.md
+++ b/05.Kustomize.md
@@ -17,8 +17,11 @@ public-api/
 - - stage
 - - production
 
-# 3. Create Kustomize yaml files
+# 3. Create Kustomize STAGE yaml files
 > [app kustomize](./assets/kustomize/)
+
+
+
 # 4. build
 ```vim
 kustomize build overlays/stage
@@ -28,5 +31,9 @@ kustomize build overlays/stage
 kubectl apply -k overlay/stage
 ```
 
-# 6. registry secret & DNS stage
+# Check
+```vim
+ curl  http://api.<NAME>.kubelabs2.tk/
+```
+
 
