--- a/06.Kustomize Practice.md
+++ b/06.Kustomize Practice.md
@@ -1,16 +1,37 @@
 # 1. kustomize Practice <!-- omit in TOC -->
 
-# 1. Create production folder
+# 1. Create static IP
+```vim
+gcloud compute addresses create api-static-ip-prod --global
+gcloud compute addresses describe api-static-ip-prod --format='value(address)' --global
+```
+## Add new Static IP as a DNS record
+# 2. Create production folder
 - /overlays/production
 
-# Create kustomization.yaml
+# 3. Create kustomization.yaml
 - namespace
 - commonLables (optional)
 - resource: ns - base
 - Patches: File patch
-- build & apply
+- Add Ingress patch: api-static-ip-prod
+ ```yaml
+ # json-pointer: ~1
+ - op: replace
+  path: /metadata/annotations/kubernetes.io~1ingress.global-static-ip-name
+  value: api-static-ip-prod
+ ```
+- Add PV & PVC patches
+## 3.1. build
 ```vim
- kustomize  build  overlay/production
+kustomize  build  overlay/production > prodtest.yaml
+```
 
- kubectl apply -k  overlay/production
+## 3.2. Check prodtest.yaml file
+## 3.3. Apply
+```vim
+kubectl apply -k  overlay/production
+
+# or
+k apply -f prodtest.yaml
 ```
