--- a/07.ArgoCD.md
+++ b/07.ArgoCD.md
@@ -113,6 +113,6 @@ git push origin main
 ```
 > wait 3 min to auto-sync
 
-# 9. Expose Argo via Ingress
+# 9. Optional. Expose Argo via Ingress
 > [yaml](./assets/argo/ingress.yaml)
 > [GKE load balancer](https://argo-cd.readthedocs.io/en/latest/operator-manual/ingress/#google-cloud-load-balancers-with-kubernetes-ingress)
