--- a/08. Opcional TLS.md
+++ b/08. Opcional TLS.md
@@ -27,10 +27,12 @@ kubectl describe clusterIssuer letsencrypt-prod -n cert-manager
 ## Kustomize ingress patch
 >[patch](./assets/apps-files/tls/ing-patch.yaml)
 
-# Cert
-
+# Check Cert
+```vim
 kubectl get certificate -A
 kubectl describe certificate -A
-kubectl describe challenge
 kg CertificateRequest
+kubectl describe challenge
 kubectl logs -n cert-manager deploy/cert-manager -f
+```
+
