--- a/09.ArgoCD Practice.md
+++ b/09.ArgoCD Practice.md
@@ -1,2 +1,17 @@
-# 07.1 Argo CD Practice <!-- omit in toc-- >
-# Add production repo
+# 09 Argo CD Practice <!-- omit in toc-- >
+# Delete ArgoCD
+```vim
+k delete ns argocd -n argocd --force --grace-period=0
+```
+
+
+# Install ArgoCD
+# Get Admin User Password & Login
+# Add Git Repo
+# Create Applications:
+# Stage api
+# Production api
+
+# CheckPoint
+- check api-stage.<NAME>.kubelabs.tk
+- check api.<NAME>.kubelabs.tk
