--- a/08. Opcional TLS.md
+++ b/08. Opcional TLS.md
@@ -15,13 +15,15 @@ kgpo -n cert-manager
 # Cluster Issuer
 > [ClusterIssuer](./assets/apps-files/tls/production_clusterIssuer.yml)
 
+```vim
 kubectl describe clusterIssuer letsencrypt-prod -n cert-manager
 
+```
+> type:  Ready
 # secret
 >[secret](./assets/apps-files/tls/secret.yaml)
- kg secret ssl
 
-# Ingress
+# Kustomize Ingress
 >[ingress](./assets/apps-files/tls/ing.yml)
 
 ## Kustomize ingress patch
@@ -31,8 +33,26 @@ kubectl describe clusterIssuer letsencrypt-prod -n cert-manager
 ```vim
 kubectl get certificate -A
 kubectl describe certificate -A
+>  The certificate has been successfully issued
+
 kg CertificateRequest
+> Certificate fetched from issuer successfully
+
 kubectl describe challenge
+
 kubectl logs -n cert-manager deploy/cert-manager -f
+> Found status change for Certificate "ssl" condition "Ready": "False" -> "True";
+
+k describe secret ssl
 ```
 
+## Check GKE Ingress - Certificate details
+
+## Check url fake cert (staging)
+```vim
+curl -v  --insecure https://api-stage.cachac.kubelabs2.tk/
+```
+
+> Server certificate, subject: CN=api-stage.cachac.kubelabs2.tk
+
+> issuer: C=US; O=(STAGING) Let's Encrypt; CN=(STAGING) Artificial Apricot R3
