--- a/09.ArgoCD Practice.md
+++ b/09.ArgoCD Practice.md
@@ -1,17 +1,17 @@
-# 09 Argo CD Practice <!-- omit in toc-- >
-# Delete ArgoCD
+# 1. 09 Argo CD Practice <!-- omit in toc-- >
+# 2. Delete ArgoCD
 ```vim
 k delete ns argocd -n argocd --force --grace-period=0
 ```
 
 
-# Install ArgoCD
-# Get Admin User Password & Login
-# Add Git Repo
-# Create Applications:
-# Stage api
-# Production api
+# 3. Install ArgoCD
+# 4. Get Admin User Password & Login
+# 5. Add Git Repo
+# 6. Create Applications:
+## 6.1. Stage api
+## 6.2. Production api
 
-# CheckPoint
+# 7. CheckPoint
 - check api-stage.<NAME>.kubelabs.tk
 - check api.<NAME>.kubelabs.tk
