--- a/10.Actions.md
+++ b/10.Actions.md
@@ -1,4 +1,4 @@
-# actions demos
-# public-api
-# github webhook
-gcloud container clusters get-credentials cicd01 --zone us-east1-b --project golden-plateau-358415gcloud container clusters get-credentials cicd01 --zone us-east1-b --project golden-plateau-358415
+# 10. Github Actions <!-- omit in toc -->
+
+# 1. Applicacion Git Repo - Actions tab
+
