--- a/10.Actions.md
+++ b/10.Actions.md
@@ -1,4 +1,16 @@
 # 10. Github Actions <!-- omit in toc -->
+> [syntax](https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions)
+
+
+
+# Stage branch: workflow file
+> .github/workflows
+
+> hello.yaml
+
+```yaml
+
+```
 
 # 1. Applicacion Git Repo - Actions tab
 
