--- a/11.Actions Practice.md
+++ b/11.Actions Practice.md
@@ -1,5 +1,7 @@
 # 10. Github Actions <!-- omit in toc -->
 
+# 1. CI-CD: Production Application (main branch)
 
-# 1. CI: Production Application (main branch)
+  pull_request:
+    branches: [ "main" ]
 
