--- a/10.Actions.md
+++ b/10.Actions.md
@@ -197,13 +197,18 @@ Set an build Job Output
       RELEASE_VERSION: ${{ steps.tagVersion.outputs.RELEASE_VERSION }}
 ```
 
-## 6.2. Create a PAT from Git Deploy Repo
+## 6.2. Crate deploy key
+> Settings - Deploy keys (Write access)
+
+> Public ssh key
+
+### 6.2.1. Optional: Create a PAT from Git Deploy Repo
 > User Profile - Settings - Developer Settings - Personal Access Token
 
 > Repo permissions
 
 ## 6.3. Add new Secret in Application Repo
-> DEPLOY_TOKEN = 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
+> DEPLOY_TOKEN = ssh-private key or PAT
 ## 6.4. New Job: deploy
 ```yaml
   deploy:
@@ -218,7 +223,8 @@ Set an build Job Output
       - uses: actions/checkout@v2
         with:
           repository: ${{ env.DEPLOY_REPO }}
-          token: ${{ secrets.DEPLOY_TOKEN }}
+          # token: ${{ secrets.DEPLOY_TOKEN }}
+          ssh-key: ${{ secrets.DEPLOY_TOKEN }}
 ```
 
 ## 6.5. set up kustumize
