--- a/10.Actions.md
+++ b/10.Actions.md
@@ -254,6 +254,7 @@ Set an build Job Output
         run: |
           git config --local user.email "deploy-bot@stotylabs.dev"
           git config --local user.name "Storylabs deploy-Bot"
+					git add .
           git commit -am "New image version, branch: staging, tag: ${{ env.VERSION }}"
           git push --force origin
 ```
