--- a/02.Github.md
+++ b/02.Github.md
@@ -57,10 +57,10 @@ newgrp docker
 source .env.qa
 echo $APP_ENV_KUBE_API
 export REGISTRY=cachac
-export $API_NAME=cachac/kubelabs_publicapi
+export $API_NAME=kubelabs_publicapi
 export $VERSION=1.0.0
 
-docker build . -f qa.dockerfile -t $REGISTRY/$API_NAME:$VERSION --build-arg APP_ENV="$APP_ENV_KUBE_API"
+docker build . -t $REGISTRY/$API_NAME:$VERSION --build-arg APP_ENV="$APP_ENV_KUBE_API"
 docker login
 docker push $REGISTRY/$API_NAME:$VERSION
 
