--- a/12.Fulllab.md
+++ b/12.Fulllab.md
@@ -3,7 +3,9 @@
 
 CI/CD flow:
 
-# 1. Create Webapp
-# 2. Create Websocket
-# 3. Create Public API
-# 4. Create Private API
+# 1. Create Public API
+
+# 2. Opcional
+# 3. Create Webapp
+# 4. Create Websocket
+# 5. Create Private API
