--- a/04.App.md
+++ b/04.App.md
@@ -6,7 +6,7 @@
 ## 1.1. add repo to local
 
 ## 1.2. public-api yamls
->[yaml](./assets/apps-files/public-api/)
+>[files](./assets/apps-files/public-api/)
 - folder public-api:
 - ns public
 - cm
@@ -36,7 +36,7 @@ kubectl get secret regcred
 ```vim
 gcloud compute addresses create api-static-ip --global
 
-gcloud compute addresses describe api-static-ip --format='value(address)' --global   
+gcloud compute addresses describe api-static-ip --format='value(address)' --global
 ```
 annotations:
     kubernetes.io/ingress.global-static-ip-name: "api-static-ip"
