--- a/04.App.md
+++ b/04.App.md
@@ -11,18 +11,18 @@
 - ns public
 - cm
 - deploy (image name and version)
-- registry access
+- registry access:
 > [info](https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/)
 ```vim
-kubectl config set-context --current --namespace=public
+kubectl config set-context --current --namespace=public-stage
 
+# docker login
 export DOCKER_PATH=<path/to/.docker/config.json>
 
 kubectl create secret generic regcred \
     --from-file=.dockerconfigjson=$DOCKER_PATH \
     --type=kubernetes.io/dockerconfigjson \
-    -n public
-
+    -n public-stage
 
 kubectl get secret regcred
 ```
