--- a/12.Fulllab.md
+++ b/12.Fulllab.md
@@ -3,9 +3,9 @@
 
 CI/CD flow:
 
-# 1. Create Public API
+# 1. Create Public API: Stage + Public
 
-# 2. Opcional
-# 3. Create Webapp
-# 4. Create Websocket
-# 5. Create Private API
+# 2. Opcionales
+## 2.1. Create Webapp
+## 2.2. Create Websocket
+## 2.3. Create Private API
