--- a/04.App.md
+++ b/04.App.md
@@ -88,11 +88,15 @@ kubectl get ing
 
 
 # 5. Storage
-- vol.yml (1 node - many pods)
-- deploy vol, 1 pod running - 1 pod pending
-- filestore
+
+## 5.1. Disk
+- Apply [vol.yml](./assets/apps-files/public-api/vol.yml) (1 node - many pods)
+- Edit deployment to consume PVC
+
+
+## 5.2. NFS filestore
 > [Filestore](./Filestore.md)
 > [info](https://upendra-kumarage.medium.com/gcp-filestore-as-a-persistent-storage-in-google-kubernetes-engine-clusters-ab4f76b34118)
-- assets/filestoreVolumen.yaml
-- Optional: assets/filestoreStorageClass.yaml
-- update deploy vol: filestore-public-api
+
+- Apply [FileStore](./assets/filestoreStorageClass.yaml)
+- update deploy claimName: fs-storage
