--- a/04.App.md
+++ b/04.App.md
@@ -92,7 +92,11 @@ kubectl get ing
 ## 5.1. Disk
 - Apply [vol.yml](./assets/apps-files/public-api/vol.yml) (1 node - many pods)
 - Edit deployment to consume PVC
+```yaml
+kubectl scale deployment deploy-public-api  --replicas 5
 
+k describe pod | grep Node
+```
 
 ## 5.2. NFS filestore
 > [Filestore](./Filestore.md)
