--- a/04.App.md
+++ b/04.App.md
@@ -95,12 +95,12 @@ kubectl get ing
 ```yaml
 kubectl scale deployment deploy-public-api  --replicas 5
 
-k describe pod | grep Node
+k describe pod | grep Node:
 ```
 
 ## 5.2. NFS filestore
-> [Filestore](./Filestore.md)
 > [info](https://upendra-kumarage.medium.com/gcp-filestore-as-a-persistent-storage-in-google-kubernetes-engine-clusters-ab4f76b34118)
 
-- Apply [FileStore](./assets/filestoreStorageClass.yaml)
+- Crear NFS: [Filestore](./Filestore.md)
+- Apply [storage](./assets/filestoreStorageClass.yaml)
 - update deploy claimName: fs-storage
