--- a/04.App.md
+++ b/04.App.md
@@ -102,5 +102,5 @@ k describe pod | grep Node:
 > [info](https://upendra-kumarage.medium.com/gcp-filestore-as-a-persistent-storage-in-google-kubernetes-engine-clusters-ab4f76b34118)
 
 - Crear NFS: [Filestore](./Filestore.md)
-- Apply [storage](./assets/filestoreStorageClass.yaml)
-- update deploy claimName: fs-storage
+- Apply [storage](./assets/filestoreVolume.yaml)
+- update deploy claimName: filestore-nfs-pv
