--- a/04.App.md
+++ b/04.App.md
@@ -103,4 +103,4 @@ k describe pod | grep Node:
 
 - Crear NFS: [Filestore](./Filestore.md)
 - Apply [storage](./assets/filestoreVolume.yaml)
-- update deploy claimName: filestore-nfs-pv
+- update deploy claimName: filestore-nfs-pvc
