--- a/05.Kustomize.md
+++ b/05.Kustomize.md
@@ -2,10 +2,10 @@
 
 # 1. delete public ns
 ```vim
-kubectl delete ns public --force --grace-period=0
+kubectl delete ns public-stage --force --grace-period=0
 
 # forzar el "finalizer"
-export NS=public &&
+export NS=public-stage &&
 kubectl get namespace "${NS}" -o json \
   | tr -d "\n" | sed "s/\"finalizers\": \[[^]]\+\]/\"finalizers\": []/" \
   | kubectl replace --raw /api/v1/namespaces/${NS}/finalize -f -
