--- a/05.Kustomize.md
+++ b/05.Kustomize.md
@@ -1,5 +1,5 @@
 # 1. kustomize <!-- omit in toc -->
-
+> [kustomize](https://kustomize.io/)
 # 1. delete public ns
 ```vim
 kubectl delete ns public-stage --force --grace-period=0
@@ -10,28 +10,35 @@ kubectl get namespace "${NS}" -o json \
   | tr -d "\n" | sed "s/\"finalizers\": \[[^]]\+\]/\"finalizers\": []/" \
   | kubectl replace --raw /api/v1/namespaces/${NS}/finalize -f -
 ```
-# 2. GitHub Deploy Project folder structure
+
+# 2. Install Kustomize
+```vim
+sudo snap install kustomize
+
+kustomize version
+```
+# 3. GitHub Deploy Project folder structure
 public-api/
 - base
 - overlays
 - - stage
 - - production
 
-# 3. Create Kustomize STAGE yaml files
+# 4. Create Kustomize STAGE yaml files
 > [app kustomize](./assets/kustomize/)
 
 
 
-# 4. build
+# 5. build
 ```vim
 kustomize build overlays/stage
 ```
-# 5. apply
+# 6. apply
 ```vim
 kubectl apply -k overlay/stage
 ```
 
-# Check
+# 7. Check
 ```vim
  curl  http://api.<NAME>.kubelabs2.tk/
 ```
