--- a/05.Kustomize.md
+++ b/05.Kustomize.md
@@ -35,7 +35,7 @@ kustomize build overlays/stage
 ```
 # 6. apply
 ```vim
-kubectl apply -k overlay/stage
+kubectl apply -k overlays/stage
 ```
 
 # 7. Check
