--- a/06.Kustomize Practice.md
+++ b/06.Kustomize Practice.md
@@ -1,4 +1,4 @@
-# 1. kustomize Practice <!-- omit in TOC -->
+# 1. kustomize Practice (Production Overlay)<!-- omit in TOC -->
 
 # 1. Create static IP
 ```vim
