--- a/07.ArgoCD.md
+++ b/07.ArgoCD.md
@@ -1,4 +1,4 @@
-# 1. Argo CD <!-- omit in toc-- >
+# 1. Argo CD <!-- omit in TOC-- >
 >[core concepts](https://argo-cd.readthedocs.io/en/stable/core_concepts/)
 
 # 2. Install ArgoCD
