--- a/09.ArgoCD Practice.md
+++ b/09.ArgoCD Practice.md
@@ -1,4 +1,4 @@
-# 1. 09 Argo CD Practice <!-- omit in toc-- >
+# 1. 09 Argo CD Practice <!-- omit in TOC-- >
 # 2. Delete ArgoCD
 ```vim
 k delete ns argocd -n argocd --force --grace-period=0
