--- a/07.ArgoCD.md
+++ b/07.ArgoCD.md
@@ -85,6 +85,10 @@ admin.enabled: "false"
 # 6. Set New Repository (UI)
 - Connect Repo Using SSH (Git Deploy repo)
 - Name: apps
+- github ssh url (ej: git@github.com:<user>/<project>.git)
+- private id_rsa key
+
+
 # 7. Create Application
 > [sync options](https://argo-cd.readthedocs.io/en/stable/user-guide/sync-options/)
 ## 7.1. UI
@@ -99,6 +103,8 @@ admin.enabled: "false"
 - public-api.yaml (copy-paste Argo Application yaml)
 ```vim
 kubectl apply -f apps/public-api.yaml
+
+kubectl get application
 ```
 
 ## 7.3. Check ArgoCD UI Apps
