--- a/08. Opcional TLS.md
+++ b/08. Opcional TLS.md
@@ -13,10 +13,11 @@ kgpo -n cert-manager
 ```
 
 # Cluster Issuer
-> [ClusterIssuer](./assets/apps-files/tls/production_clusterIssuer.yml)
+> [Issuer](./assets/apps-files/tls/api-stage-real-issuer.yaml)
 
 ```vim
 kubectl describe clusterIssuer letsencrypt-prod -n cert-manager
+kubectl describe issuer letsencrypt-prod -n cert-manager
 
 ```
 > type:  Ready
