--- a/08. Opcional TLS.md
+++ b/08. Opcional TLS.md
@@ -12,11 +12,10 @@ kubectl apply -f https://github.com/cert-manager/cert-manager/releases/download/
 kgpo -n cert-manager
 ```
 
-# Cluster Issuer
+# Issuer
 > [Issuer](./assets/apps-files/tls/api-stage-real-issuer.yaml)
 
 ```vim
-kubectl describe clusterIssuer letsencrypt-prod -n cert-manager
 kubectl describe issuer letsencrypt-prod -n cert-manager
 
 ```
