--- a/08. Opcional TLS.md
+++ b/08. Opcional TLS.md
@@ -12,11 +12,11 @@ kubectl apply -f https://github.com/cert-manager/cert-manager/releases/download/
 kgpo -n cert-manager
 ```
 
-# Issuer
-> [Issuer](./assets/apps-files/tls/api-stage-real-issuer.yaml)
+# Cluster Issuer
+> [Issuer](./assets/apps-files/tls/clusterIssuer.yaml)
 
 ```vim
-kubectl describe issuer letsencrypt-prod -n cert-manager
+kubectl get clusterIssuer letsencrypt-prod
 
 ```
 > type:  Ready
