--- a/10.Actions.md
+++ b/10.Actions.md
@@ -197,7 +197,7 @@ Set an build Job Output
       RELEASE_VERSION: ${{ steps.tagVersion.outputs.RELEASE_VERSION }}
 ```
 
-## 6.2. Crate deploy key
+## 6.2. Create deploy key
 > Settings - Deploy keys (Write access)
 
 > Public ssh key
@@ -220,14 +220,14 @@ Set an build Job Output
       VERSION: ${{ needs.build.outputs.RELEASE_VERSION }}
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           repository: ${{ env.DEPLOY_REPO }}
           # token: ${{ secrets.DEPLOY_TOKEN }}
           ssh-key: ${{ secrets.DEPLOY_TOKEN }}
 ```
 
-## 6.5. set up kustumize
+## 6.5. set up kustomize
 >[market-place](https://github.com/marketplace/actions/setup-kustomize)
 ```yaml
  - name: Setup Kustomize
