--- a/10.Actions.md
+++ b/10.Actions.md
@@ -153,7 +153,7 @@ APP_ENV={ "APP_NAME":"backend", "NODE_ENV":"production", "NODE_PORT":"3000", "TO
 ```yaml
 ...
       - name: Get TAG version
-        run: echo "RELEASE_VERSION=$(git tag | sort -V | tail -1)" >> $GITHUB_ENV
+        run: echo "RELEASE_VERSION=$(git tag --sort=-creatordate | head -1)" >> $GITHUB_ENV
 
       - name: New Tag Version
         run: echo ${{ env.RELEASE_VERSION }}
