--- a/02.Github.md
+++ b/02.Github.md
@@ -1,19 +1,29 @@
 
 # 02. Github <!-- omit in TOC-->
+Control de versiones para los proyectos.
 
-# 2. Create account
+Se requieren dos repositorios:
+
+- Para el código de las aplicaciones (Dev)
+- Para los YAML's de Kubernetes (Ops)
+
+
+# 2. Crear cuenta GITHub
+Esta cuenta se utilizará para el control de versiones de la aplicación (Dev)
 ## 2.1. Add ssh keys
 ssh-keygen -q -N "" -C "user@lab.com"
 
-## 2.2. create private repo: Apps
-## 2.3. add repo to local
+## 2.2. Crear repositorio privado: Apps
+## 2.3. Agregar el repositorio al entorno local
 ```vim
 git init
-git remote add origin ssh-link
+git remote add origin <ssh-link>
 git pull origin main
 ```
 
-## STAGE branch
+## Git branch
+El repositorio de aplicacion requiere dos Branches: State y Main (Producción)
+
 - stage
 - main= production
 
@@ -22,8 +32,7 @@ git checkout -b stage
 git push -u origin stage
 ```
 
-
-# 3. Add App kubelabs and push
+# 3. Agreagar la App kubelabs and subir el código a GitHub
 - Git clone kubelabs repo
 ```vim
 git clone https://github.com/cachac/kubelabs.git
@@ -47,12 +56,13 @@ newgrp docker
 
 
 # 5. DockerHub
+
 ## 5.1. Create Account
 ## 5.2. publish repo
 > [login](https://docs.docker.com/engine/reference/commandline/login/)
 
 
-# 6. build docker container
+# 6. Construir el contenedor Docker
 ```vim
 source .env.qa
 echo $APP_ENV_KUBE_API
@@ -70,4 +80,4 @@ curl localhost:3080/healthcheck
 ```
 
 
-## 6.1. make repo private
+## 6.1. Hacer el Git repo privado
