--- a/04.App.md
+++ b/04.App.md
@@ -1,22 +1,27 @@
 
 # 04 Kubernetes definitions files <!-- omit in toc -->
 
-# 1. Create second private git repo: deploy
+# 1. Craer un segundo repositorio Git Privado: Ops
+Este repositorio contiene los archivos YAML con los recursos de Kubernetes.
 
-## 1.1. add repo to local
+## 1.1. Agregar el repositorio al entorno local
 
 ## 1.2. public-api yamls
+YAML's de Kubernetes de la aplicación DEMO: public-api
+
 >[files](./assets/apps-files/public-api/)
-- folder public-api:
+- folder public-api
 - ns public
 - cm
 - deploy (image name and version)
 - registry access:
 > [info](https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/)
 ```vim
+# cambiar al ns public-stage
 kubectl config set-context --current --namespace=public-stage
 
 # docker login
+# Como la imagen es privada en Docker Hub, es necesario crear un secret con las credenciales.
 export DOCKER_PATH=<path/to/.docker/config.json>
 
 kubectl create secret generic regcred \
@@ -26,7 +31,7 @@ kubectl create secret generic regcred \
 
 kubectl get secret regcred
 ```
-- agregar al deploy.yaml
+- agregar el secret al deploy.yaml para descargar la imagen
 ```yaml
 	imagePullSecrets:
 	- name: regcred
