--- a/05.Kustomize.md
+++ b/05.Kustomize.md
@@ -1,5 +1,12 @@
 # 1. kustomize <!-- omit in toc -->
 > [kustomize](https://kustomize.io/)
+
+Kustomize automatiza la creación de recursos Kubernetes en diferentes ambientes.
+Se define una configuración base con los archivos Yaml necesarios
+Los ambientes se dividen en Overlays.
+
+![Kustomize](./assets/img/kustomize.jpeg)
+
 # 1. delete public ns
 ```vim
 kubectl delete ns public-stage --force --grace-period=0
