--- a/02.Github.md
+++ b/02.Github.md
@@ -8,6 +8,8 @@ Se requieren dos repositorios:
 - Para los YAML's de Kubernetes (Ops)
 
 
+![git repos](./assets/img/git.jpeg)
+
 # 2. Crear cuenta GITHub
 Esta cuenta se utilizará para el control de versiones de la aplicación (Dev)
 ## 2.1. Add ssh keys
