--- a/05.Kustomize.md
+++ b/05.Kustomize.md
@@ -37,10 +37,13 @@ public-api/
 
 
 # 5. build
+Construye los recursos Kubernetes de acuerdo al ambiente:
+Este comando genera un archivo yaml para verificar la configuración
 ```vim
-kustomize build overlays/stage
+kustomize build overlays/stage > build-stage.yaml
 ```
 # 6. apply
+Aplica la configuración Kustomize en el Cluster.
 ```vim
 kubectl apply -k overlays/stage
 ```
