--- a/07.ArgoCD.md
+++ b/07.ArgoCD.md
@@ -1,5 +1,10 @@
 # 1. Argo CD <!-- omit in TOC-- >
 >[core concepts](https://argo-cd.readthedocs.io/en/stable/core_concepts/)
+Se encarga de escuchar al repositorio OPS, que tiene los archivos YAML de kubernetes
+Cuando encuentra un cambio en la configuración, aplica esos cambios en el cluster.
+
+
+
 
 # 2. Install ArgoCD
 >[Install](https://argo-cd.readthedocs.io/en/stable/operator-manual/installation/)
