--- a/10.Actions.md
+++ b/10.Actions.md
@@ -1,7 +1,7 @@
 # 10. Github Actions <!-- omit in toc -->
 > [syntax](https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions)
 
-
+![Pipeline](./assets/img/pipeline.jpeg)
 
 # 1. CI: Stage branch: workflow file
 > .github/workflows
@@ -21,8 +21,10 @@ on:
 # pipeline
 jobs:
   print: # job name
+	  # ejecuta el pipeline en una VM Ubuntu
     runs-on: ubuntu-latest # https://docs.github.com/en/actions/using-github-hosted-runners/about-github-hosted-runners
 
+    # Pasos a ejecutar
     steps:
       - name: print-to-screen
         run: echo "Hello World!"
@@ -123,7 +125,7 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 ```
 
-## 3.3. Build & Push (latest version)
+## 3.3. Docker Container Build & Push (Aplication latest version)
 > [Docker Buildx](https://github.com/docker/build-push-action)
 
 - Args secret
@@ -186,6 +188,8 @@ Update Step "New Tag Version"
         id: tagVersion
         run: |
           echo ${{ env.RELEASE_VERSION }}
+
+					# Crea una variable tipo output para ser utilizada en otro JOB
           echo "::set-output name=RELEASE_VERSION::${{ env.RELEASE_VERSION }}"
 ```
 Set an build Job Output
@@ -193,11 +197,13 @@ Set an build Job Output
   build:
     runs-on: ubuntu-latest
 
+		# exporta las variables tipo output al resto de JOBS del pipeline
     outputs:
       RELEASE_VERSION: ${{ steps.tagVersion.outputs.RELEASE_VERSION }}
 ```
 
-## 6.2. Create deploy key
+## 6.2. Create deploy key (OPS repo)
+Es necesaria una llave de acceso para la cuenta de OPS
 > Settings - Deploy keys (Write access)
 
 > Public ssh key
@@ -208,6 +214,8 @@ Set an build Job Output
 > Repo permissions
 
 ## 6.3. Add new Secret in Application Repo
+Descarga el código del repo OPS en el pipeline para hacer el cambio de versión de la imagen de Kubernetes.
+
 > DEPLOY_TOKEN = ssh-private key or PAT
 ## 6.4. New Job: deploy
 ```yaml
@@ -241,6 +249,8 @@ Set an build Job Output
       - name: Update Kubernetes resources
         run: |
           cd public-api/overlays/stage
+
+					# Cambia la versión de la imagen
           kustomize edit set image KUSTOMIZE-DEFINED=${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
 
           # Optional: check yaml files Kustomized
@@ -248,7 +258,7 @@ Set an build Job Output
           cat kustomized-apps.yml
 ```
 
-## 6.7. commit changes to git deploy repo
+## 6.7. commit changes to git OPS repo
 ```yaml
       - name: Commit files
         run: |
