--- a/01.Github.md
+++ b/01.Github.md
@@ -1,6 +1,14 @@
 
-# 01. Github <!-- omit in TOC-->
-Control d4os](./assets/img/git.jpeg)
+# 02. Github <!-- omit in TOC-->
+Control de versiones para los proyectos.
+
+Se requieren dos repositorios:
+
+- Para el código de las aplicaciones (Dev)
+- Para los YAML's de Kubernetes (Ops)
+
+
+![git repos](./assets/img/git.jpeg)
 
 # 2. Crear cuenta GITHub
 Esta cuenta se utilizará para el control de versiones de la aplicación (Dev)
@@ -16,7 +24,7 @@ git pull origin main
 ```
 
 ## Git branch
-El repositorio de aplicacion requiere dos Branches: Stage y Main (Producción)
+El repositorio de aplicacion requiere dos Branches: State y Main (Producción)
 
 - stage
 - main= production
@@ -26,7 +34,7 @@ git checkout -b stage
 git push -u origin stage
 ```
 
-# 3. Agregar la App kubelabs and subir el código a GitHub
+# 3. Agreagar la App kubelabs and subir el código a GitHub
 - Git clone kubelabs repo
 ```vim
 git clone https://github.com/cachac/kubelabs.git
