--- a/01.Github.md
+++ b/01.Github.md
@@ -18,6 +18,8 @@ ssh-keygen -q -N "" -C "user@lab.com"
 ## 2.2. Crear repositorio privado: Apps
 ## 2.3. Agregar el repositorio al entorno local
 ```vim
+mkdir public-api
+cd public-api
 git init
 git remote add origin <ssh-link>
 git pull origin main
@@ -34,12 +36,16 @@ git checkout -b stage
 git push -u origin stage
 ```
 
-# 3. Agreagar la App kubelabs and subir el código a GitHub
+# 3. Agreagar la App kubelabs (public-api) and subir el código a GitHub
 - Git clone kubelabs repo
 ```vim
 git clone https://github.com/cachac/kubelabs.git
 ```
 - copy dev/public-api folder
+```vim
+ejemplo:
+cp -r ~/kubelabs/dev/public-api/* .
+```
 ```vim
 git add .
 git commit -m 'init'
