--- a/02.KubernetesCluster.md
+++ b/02.KubernetesCluster.md
@@ -3,6 +3,12 @@
 
 ## 1. [GKE](./GKE.md)
 ## 2. [EKS](./EKS.md)
-
+## 3. Minikube
+```vim
+	sudo apt update
+	curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
+  sudo install minikube-linux-amd64 /usr/local/bin/minikube
+  minikube start
+```
 
 ![Cluster](./assets/img/cluster.jpeg)
