--- a/01.Github.md
+++ b/01.Github.md
@@ -18,8 +18,8 @@ ssh-keygen -q -N "" -C "user@lab.com"
 ## 2.2. Crear repositorio privado: Apps
 ## 2.3. Agregar el repositorio al entorno local
 ```vim
-mkdir public-api
-cd public-api
+mkdir apps
+cd apps
 git init
 git remote add origin <ssh-link>
 git pull origin main
@@ -36,7 +36,7 @@ git checkout -b stage
 git push -u origin stage
 ```
 
-# 3. Agreagar la App kubelabs (public-api) and subir el código a GitHub
+# 3. Agregar la App kubelabs (public-api) and subir el código a GitHub
 - Git clone kubelabs repo
 ```vim
 git clone https://github.com/cachac/kubelabs.git
@@ -49,8 +49,7 @@ cp -r ~/kubelabs/dev/public-api/* .
 ```vim
 git add .
 git commit -m 'init'
-git checkout -b main
-git push -u origin main
+git push -u origin stage
 ```
 
 # 4. Install Docker
@@ -66,17 +65,19 @@ newgrp docker
 # 5. DockerHub
 
 ## 5.1. Create Account
-## 5.2. publish repo
+## 5.2. Publish repo
 > [login](https://docs.docker.com/engine/reference/commandline/login/)
-
+```vim
+docker login
+```
 
 # 6. Construir el contenedor Docker
 ```vim
 source .env.qa
 echo $APP_ENV_KUBE_API
 export REGISTRY=cachac
-export $API_NAME=kubelabs_publicapi
-export $VERSION=1.0.0
+export API_NAME=kubelabs_publicapi
+export VERSION=1.0.0
 
 docker build . -t $REGISTRY/$API_NAME:$VERSION --build-arg APP_ENV="$APP_ENV_KUBE_API"
 docker login
