--- a/01.Github.md
+++ b/01.Github.md
@@ -37,14 +37,10 @@ git push -u origin stage
 ```
 
 # 3. Agregar la App kubelabs (public-api) and subir el código a GitHub
-- Git clone kubelabs repo
-```vim
-git clone https://github.com/cachac/kubelabs.git
-```
-- copy dev/public-api folder
+- copy assets/dev/public-api folder
 ```vim
 ejemplo:
-cp -r ~/kubelabs/dev/public-api/* .
+cp -r assets/dev/public-api/* .
 ```
 ```vim
 git add .
