--- a/03.App.md
+++ b/03.App.md
@@ -58,7 +58,20 @@ kubectl get ing
 # check address
 ```
 
-## 1.5. Check GCP console LB
+## 1.5. Optional. Minikube external-ip
+```vim
+minikube addons list
+newgrp docker
+minikube addons enable ingress
+minikube addons enable ingress-dns
+
+minikube addons enable metallb
+
+-- Enter Load Balancer Start IP: 192.168.99.105
+-- Enter Load Balancer End IP: 192.168.99.120
+```
+
+## 1.6. Check GCP console LB
 # 2. add DNS records
 > [multi LB](https://cloud.google.com/kubernetes-engine/docs/tutorials/http-balancer)
 > [dns](https://medium.com/google-cloud/dns-on-gke-everything-you-need-to-know-b961303f9153)
