--- a/03.App.md
+++ b/03.App.md
@@ -60,8 +60,13 @@ kubectl get ing
 
 ## 1.5. Optional. Minikube external-ip
 ```vim
-minikube addons list
 newgrp docker
+minikube addons list
+minikube ip
+echo "$(minikube ip)  cachac36.kubelabs.dev" | sudo tee -a /etc/hosts
+
+
+# opcionales
 minikube addons enable ingress
 minikube addons enable ingress-dns
 
@@ -69,6 +74,9 @@ minikube addons enable metallb
 
 -- Enter Load Balancer Start IP: 192.168.99.105
 -- Enter Load Balancer End IP: 192.168.99.120
+
+minikube tunnel
+minikube service svc-public-api -n public-stage --url
 ```
 
 ## 1.6. Check GCP console LB
