--- a/03.App.md
+++ b/03.App.md
@@ -63,10 +63,11 @@ kubectl get ing
 newgrp docker
 minikube addons list
 minikube ip
-echo "$(minikube ip)  cachac36.kubelabs.dev" | sudo tee -a /etc/hosts
 
 
 # opcionales
+echo "$(minikube ip)  LABUSER.kubelabs.dev" | sudo tee -a /etc/hosts
+
 minikube addons enable ingress
 minikube addons enable ingress-dns
 
