--- a/06.ArgoCD.md
+++ b/06.ArgoCD.md
@@ -126,6 +126,28 @@ git commit -m "update deployment replicas"
 git push origin main
 ```
 > wait 3 min to auto-sync
+> argocd app sync <APP_NAME>
+
+
+## Commands
+```vim
+argocd app list
+argocd app get <APP_NAME>
+argocd app history <APP_NAME>
+argocd app history <APP_NAME>
+argocd app delete <APP_NAME>
+
+argocd app create <OPTIONS>
+
+EJ:
+argocd app create kustomize-gitops-example \
+--project default \
+--repo https://github.com/cachac/gitops-certification-examples \
+--path "./kustomize-app/overlays/staging" \
+--sync-policy auto \
+--dest-namespace default \
+--dest-server https://kubernetes.default.svc
+```
 
 # 9. Optional. Expose Argo via Ingress
 > [yaml](./assets/argo/ingress.yaml)
